@@ -1,5 +1,11 @@
 2008-01-29  Alexander Larsson  <alexl@redhat.com>
 
+        * gappinfo.h:
+        * gdesktopappinfo.c:
+	Add G_APP_INFO_CREATE_SUPPORTS_URIS flag
+
+2008-01-29  Alexander Larsson  <alexl@redhat.com>
+
         * gdesktopappinfo.c:
         * gdesktopappinfo.h:
 	giomodule-priv.h include moved to .c file.
